# KrackX

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Krack_X.7z  LICENSE  Makefile  README.md  build-Krack_X-Desktop_Qt_5_11_1_GCC_64bit-Debug.7z  sources  sources.txt
.github/workflows/: ci.yml  docker.yml
Archive/KrackX/: main.qml~RFc6ab01.TMP
Archive/Krack_X/: Krack_X.pro.user.20b349d  core.cpp  core.h  qml.qrc
Archive/build-Krack_X-Desktop_Qt_5_11_1_GCC_64bit-Debug/: moc_predefs.h
Archive/build-Krack_X-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Krack_X  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
KrackX/: AboutPage.qml  KrackPasswordPage.qml  KrackPasswordPage.qml.autosave  KrackX.pro  KrackX.pro.user.b97d190.4.10-pre1  SettingsPage.qml  about_compilation.cpp  about_compilation.h  applicationui.cpp  applicationui.h  core.cpp  core.h  cpuinfo.cpp  cpuinfo.h  instructions.cpp  instructions.h  main.cpp  main.qml  mainPage.qml  qml.qrc  resource_file.qrc  scheduler.cpp  scheduler.h  sources
KrackX/Core/Scheduler/: scheduler.cpp
KrackX/android/: AndroidManifest.xml
Krack_X/: Krack_X.pro  Settings.qml  core.cpp  core.h  core_add.cpp  core_add.h  debug.cpp  debug.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
android-openssl-qt/: build_ssl.sh
build-KrackX-Desktop_Qt_5_13_1_GCC_64bit-Debug/: KrackX  Makefile  moc_about_compilation.cpp  moc_applicationui.cpp  moc_core.cpp  moc_predefs.h  moc_scheduler.cpp  qrc_qml.cpp  qrc_resource_file.cpp
build-Krack_X-Desktop_Qt_5_11_1_GCC_64bit-Debug/: .qmake.stash  Krack_X  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Krack_X-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Krack_X  moc_predefs.h  ui_mainwindow.h
build-Krack_X-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-Krack_X-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/: moc_handletextfield.cpp  qrc_qml.cpp
build-krackx-Desktop_Qt6-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appkrackx  build.ninja  cmake_install.cmake
build-krackx-Desktop_Qt6-Debug/.cmake/api/v1/reply/: cache-v2-05b3ec45f8b321f3b8ec.json  cmakeFiles-v1-3d1ae94ebcf9afdc717e.json  codemodel-v2-049ee78cc4fac905cff4.json  index-2022-03-31T22-20-06-0488.json  target-all_qmllint-Debug-640f3c30db5020242f4a.json  target-all_qmltyperegistrations-Debug-2af61d5109a388ccbba7.json  target-appkrackx-Debug-c5e1244b98f4e7dabece.json  target-appkrackx_autogen-Debug-3cc88cb4c39b06bcf61e.json  target-appkrackx_autogen_timestamp_deps-Debug-2dc48855b158923dd28c.json  target-appkrackx_other_files-Debug-9d09f46074375804fe82.json  target-appkrackx_qmllint-Debug-30ebd149fa7440f48350.json  target-appkrackx_qmltyperegistration-Debug-5094c569ce1b05129e55.json  target-appkrackx_tooling-Debug-cf5aece4fcfa1e6f8ba4.json
build-krackx-Desktop_Qt6-Debug/.rcc/: appkrackx_raw_qml_0.qrc  qmake_krackx.qrc  qrc_appkrackx_raw_qml_0.cpp  qrc_qmake_krackx.cpp
build-krackx-Desktop_Qt6-Debug/.rcc/qmlcache/: appkrackx_AboutPage_qml.cpp  appkrackx_KrackPasswordPage_qml.cpp  appkrackx_SettingsPage_qml.cpp  appkrackx_mainPage_qml.cpp  appkrackx_main_qml.cpp  appkrackx_qml_loader_file_list.rsp  appkrackx_qmlcache_loader.cpp
build-krackx-Desktop_Qt6-Debug/appkrackx_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-krackx-Desktop_Qt6-Debug/appkrackx_autogen/EWIEGA46WW/: moc_about_compilation.cpp  moc_about_compilation.cpp.d  moc_about_compilation.cpp.json  moc_applicationui.cpp  moc_applicationui.cpp.d  moc_applicationui.cpp.json  moc_counter.cpp  moc_counter.cpp.d
build-krackx-Desktop_Qt6-Debug/krackx/: AboutPage.qml  SettingsPage.qml  qmldir
build-krackx-Desktop_Qt6-Debug/meta_types/: appkrackx_json_file_list.txt  appkrackx_json_file_list.txt.timestamp  qt6appkrackx_debug_metatypes.json
build-krackx-Desktop_Qt6-Debug/qmltypes/: appkrackx_foreign_types.txt  appkrackx_qmltyperegistrations.cpp.d
cmake/: ccache.cmake  color.cmake  dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
krackx/: AboutPage.qml  CMakeLists.txt  GTA_SA.qml  KrackPasswordPage.qml  Rectangle_test.qml  SettingsPage.qml  TableModel.h  about_compilation.cpp  applicationui.cpp  applicationui.h  chartdatamodel.cpp  chartdatamodel.h  counter.cpp  counter.qml  data.cpp  data.h  gta_sa.cpp  gta_sa.h  gta_sa_ui.cpp  gta_sa_ui.h  imageprovider.cpp  imageprovider.h  liveimage.cpp  liveimage.h  main.cpp  main.qml  mainPage.qml  qimageitem.cpp  qimageitem.h  utils.h
source/: GTA_SA.qml  SettingsPage.qml  TableModel.h  about_compilation.h  applicationui.cpp  applicationui.h  chartdatamodel.cpp  chartdatamodel.h  compilation.cpp  compilation.hpp  counter.cpp  counter.h  counter.qml  gta_sa.cpp  gta_sa.h  gta_sa.hpp  gta_sa_ui.cpp  gta_sa_ui.h  imageprovider.cpp  imageprovider.h  liveimage.cpp  liveimage.h  main.cpp  qimageitem.cpp  qimageitem.h  utils.h
source/cuda/: CMakeLists.txt  kernel.cpp  kernel.cu  kernel.cuh  kernel.hpp  wrapper.cu
source/cuda/kernel/: kernel.cu  kernel.cuhpp
source/cuda_kernel/: kernel.cu  kernel.cuhpp  kernel.h  kernel.hpp
source/qml/: AboutPage.qml  GTA_SA.qml  Rectangle_test.qml  SettingsPage.qml  counter.qml  image_test.qml  main.qml  mainPage.qml
test/: CMakeLists.txt
test/source/: find_string_inv_bench.cpp  find_string_inv_test.cpp  jamcrc_bench.cpp  jamcrc_test.cpp
